<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">garage oPIner</string>
    <string name="Settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="credentials">Credentials</string>
    <string name="consettings">Connection Settings</string>
    <string name="ipaddress">IP address</string>
    <string name="ipaddresssummary">IP address of Raspberry PI</string>
    <string name="port">Port</string>
    <string name="portsummary">Port garage oPIner is running.</string>
    <string name="password">Password</string>
    <string name="passwordsummary">Password for login</string>
    <string name="username">Username</string>
    <string name="usernamesummary">Username for login</string>
    <string name="garage1">Garage settings</string>
    <string name="twodoors">Aktivate second garage door</string>
    <string name="twodoorssummary">Allows you to control 2 garage doors</string>
    <string name="timecontrol">Time control</string>
    <string name="timecontrolsummary">Sends a second control after a given duration </string>
    <string name="duration">Duration</string>
    <string name="durationdefault">3</string>
    <string name="durationdialog">Select duration in minutes:</string>
    <string name="door1"> Door 1:</string>
    <string name="door1name">Name for first door</string>
    <string name="door1summary">Name for the first door</string>

    <string name="door2">Door 2:</string>
    <string name="door2name">Name for second door</string>
    <string name="door2summary">Name for the second door</string>

    <string name="minutes">minutes</string>

    <string-array name="durationvalues">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="btntxt_trigger">Open / Close</string>
    <string name="btntxt_triggertime">Time control </string>
    <string name="service_name">garage oPIner Communication Service</string>
    <string name="now">Now</string>
    <string name="cancel">Cancel</string>
    <string name="notificationtitle">Time control</string>
    <string name="notificationsubtitle">Triggers in </string>
    <string name="seconds">seconds</string>
    <string name="connectionerror">Connection error</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="disclaimer_text">THIS SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="about">About</string>

</resources>